# Crawiot

./: .gitignore  setup.ps1  update_index_page.ps1
Crawiot/: Crawiot.sln
Crawiot/Crawiot/: Program.cs
app/: CMakeLists.txt  app.ino  common.h  crawiot_app.cpp  crawiot_app.h  crawiot_circularbuffer.cpp  crawiot_circularbuffer.h  crawiot_common.cpp  crawiot_common.h  crawiot_config.h  crawiot_distance_tracker.cpp  crawiot_distance_tracker.h  crawiot_location.cpp  crawiot_location.h  crawiot_main_page.h  crawiot_mediator.cpp  crawiot_mediator.h  crawiot_motion.cpp  crawiot_motion.h  crawiot_motion_api.cpp  crawiot_motion_api.h  crawiot_motion_engine.cpp  crawiot_motion_tracker.cpp  crawiot_motion_tracker.h  crawiot_network.cpp  crawiot_network.h  crawiot_network_dns.cpp  crawiot_network_http_server.cpp  crawiot_network_mition_api.cpp  crawiot_network_motion_api.cpp  crawiot_network_wifi.cpp  crawiot_strategic.cpp  crawiot_strategic.h  crawiot_tactical.cpp  crawiot_tactical.h  crawiot_traces.cpp  crawiot_traces.h
backend/: app.py  barriers_map.py  car_api.py  coordinates.py  find_path.py  grid.py  map.json  requirements.txt  strategic.py  testing.py  trivial_path.py
backend/Map/: MapExample.txt  Object.py  Parser.py
backend/templates/: index.html
mpu/: first.cpp
resources/: index.html
